--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,216 @@
+@font-face {
+  font-family: 'Eightgon'; /*a name to be used later*/
+  src: url('Eightgon-OGn6p.ttf'); /*URL to font*/
+}
+
+* {
+  font-family: 'Nunito';
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: calc(100vh - 4rem);
+  scroll-margin-top: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(10px + 3vmin);
+  min-width: 0;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  font-family: 'Eightgon';
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+h3 {
+  font-size: calc(10px + 1vmin);
+}
+
+h5 {
+  margin: 20px 0 5px 0;
+}
+
+.contact-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.Projects {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-width: 0;
+}
+
+.single-proj {
+  align-items: center;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-bottom: 1.5rem;
+  border-radius: .75rem;
+  background-color: rgb(39 39 39);
+  min-width: 200px;
+  max-width: 350px;
+  filter: drop-shadow(5px 5px 5px black);
+}
+
+.front-proj {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.front-proj p {
+  font-size: calc(10px + .5vmin);
+  margin: 10px 1rem;
+  flex-grow: 1;
+}
+
+.front-proj a {
+  margin-top: auto;
+}
+
+.icons {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  align-items: center;
+}
+
+.proj-icons {
+  margin-top: auto;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  align-items: center;
+  align-self: flex-end;
+}
+
+.App-header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+.navi {
+  display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: grey;
+  height: 4rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.nav-anchors {
+  padding: 1.5rem;
+  align-items: center;
+  cursor: pointer;
+}
+
+.videoTag {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(75%);
+}
+
+img {
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+  border-radius: .75rem;
+  border: 2px solid rgb(39 39 39);
+  width: 90%;
+  height: auto;
+  margin-bottom: 0;
+}
+
+.about-inner {
+  display: flex;
+  align-items: center;
+}
+
+.about-paragraph {
+  font-size: calc(10px + 1.5vmin);
+  max-width: 40rem;
+  padding: 6rem;
+}
+
+.about-skills {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr)); 
+  gap: 0px 0px; 
+  border-radius: .75rem;
+  border: 2px solid hsla(0, 97%, 63%, 1);
+  background-color: rgb(39 39 39);
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.skill-img {
+  margin: 1rem auto;
+  width: 100%;
+  height: 80%;
+}
+
+.skill-text {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: hsla(0, 97%, 63%, 1);
+  line-height: 2rem;
+  height: 2rem;
+  font-size: 1.5rem;
+}
+
+.skill {
+  background-color: transparent;
+  min-width: 150px;
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 1080px) {
+  .about-inner {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .about-paragraph {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 640px) {
+  .about-skills {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 768px) {
+  .about-skills {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px) {
+  .about-skills {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 }
